c4prj2_input/grade.txt
Grading at Wed Mar 10 21:45:16 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:19:24: error: expected statement before ‘)’ token
     if (card[0] == '?')){
                        ^
input.c:23:5: error: ‘else’ without a previous ‘if’
     else{
     ^
Compilation of input.c failed

Overall Grade: F
